Package section done

--- a/index.html
+++ b/index.html
@@ -89,9 +89,138 @@
             </button>
           </div>
     </section>
-    <!-- Frequently Asked Questions -->
-    <section class="my-5">
+    <!-- Our Package -->
+    <section id="our-package">
         <div class="container">
+            <h2 class="text-center mt-4 py-5 fw-bold">Our Package</h2>
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 gy-3 pt-5 d-flex align-items-end">
+                <div class="col">
+                    <div class="p-2">
+                        <h4 class="fw-bold mb-3">$300</h4>
+                        <h5 class="fw-bold">Business fair</h5>
+                        <p>For most businesses event like book fair, craft fair.</p>
+                        <div class="d-flex flex-column">
+                            <span>
+                                <i class="far fa-check-circle"></i>
+                                <small>limited space access</small>
+                            </span>
+                            <span>
+                                <i class="far fa-check-circle"></i>
+                                <small>Secuirty facility</small>
+                            </span>
+                            <span>
+                                <i class="far fa-check-circle"></i>
+                                <small>event support</small>
+                            </span>
+                            <span>
+                                <i class="far fa-check-circle"></i>
+                                <small>Decoration design</small>
+                            </span>
+                            <span>
+                                <i class="far fa-check-circle"></i>
+                                <small>Per day bill</small>
+                            </span>
+                        </div>
+                        <a class="btn rounded-pill mt-3 w-100 text-primary fw-bold plan-btn">Choose plan</a>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="p-2">
+                        <h4 class="fw-bold mb-3">$300</h4>
+                        <h5 class="fw-bold">Business fair</h5>
+                        <p>For most businesses event like book fair, craft fair.</p>
+                        <div class="d-flex flex-column">
+                            <span>
+                                <i class="far fa-check-circle"></i>
+                                <small>limited space access</small>
+                            </span>
+                            <span>
+                                <i class="far fa-check-circle"></i>
+                                <small>Secuirty facility</small>
+                            </span>
+                            <span>
+                                <i class="far fa-check-circle"></i>
+                                <small>event support</small>
+                            </span>
+                            <span>
+                                <i class="far fa-check-circle"></i>
+                                <small>Decoration design</small>
+                            </span>
+                            <span>
+                                <i class="far fa-check-circle"></i>
+                                <small>Per day bill</small>
+                            </span>
+                        </div>
+                        <a class="btn rounded-pill mt-3 w-100 text-primary fw-bold plan-btn">Choose plan</a>
+                    </div>
+                </div>
+                <div class="col shadow-lg highlight p-5 bg-info text-white">
+                    <div>
+                        <h4 class="fw-bold mb-3">$300</h4>
+                        <h5 class="fw-bold">Business fair</h5>
+                        <p>For most businesses event like book fair, craft fair.</p>
+                        <div class="d-flex flex-column">
+                            <span>
+                                <i class="far fa-check-circle"></i>
+                                <small>limited space access</small>
+                            </span>
+                            <span>
+                                <i class="far fa-check-circle"></i>
+                                <small>Secuirty facility</small>
+                            </span>
+                            <span>
+                                <i class="far fa-check-circle"></i>
+                                <small>event support</small>
+                            </span>
+                            <span>
+                                <i class="far fa-check-circle"></i>
+                                <small>Decoration design</small>
+                            </span>
+                            <span>
+                                <i class="far fa-check-circle"></i>
+                                <small>Per day bill</small>
+                            </span>
+                        </div>
+                        <a class="btn rounded-pill mt-3 w-100 text-white bg-dark fw-bold">Choose plan</a>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="p-2">
+                        <h4 class="fw-bold mb-3">$300</h4>
+                        <h5 class="fw-bold">Business fair</h5>
+                        <p>For most businesses event like book fair, craft fair.</p>
+                        <div class="d-flex flex-column">
+                            <span>
+                                <i class="far fa-check-circle"></i>
+                                <small>limited space access</small>
+                            </span>
+                            <span>
+                                <i class="far fa-check-circle"></i>
+                                <small>Secuirty facility</small>
+                            </span>
+                            <span>
+                                <i class="far fa-check-circle"></i>
+                                <small>event support</small>
+                            </span>
+                            <span>
+                                <i class="far fa-check-circle"></i>
+                                <small>Decoration design</small>
+                            </span>
+                            <span>
+                                <i class="far fa-check-circle"></i>
+                                <small>Per day bill</small>
+                            </span>
+                        </div>
+                        <a class="btn rounded-pill mt-3 w-100 text-primary fw-bold plan-btn">Choose plan</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Frequently Asked Questions -->
+    <section id="frequently-asked" class="my-5">
+        <div class="container">
+            <h2 class="text-center mb-5 py-5 fw-bold">Frequently Asked Questions</h2>
             <div class="row">
                 <div class="col-lg-6">
                     <div>
