--- a/index.html
+++ b/index.html
@@ -289,6 +289,27 @@
         </div>
         
     </section>
+    <!-- Footer  -->
+    <footer class="bg-dark">
+        <div class="container">
+            <div class="row text-white py-5">
+                <div class="d-flex flex-column justify-content-center align-items-center flex-md-row justify-content-md-between align-items-md-center">
+                    <div class="order-last order-md-first mt-5 mt-md-0">
+                        <small class="text-center d-block">&copy; 2022 Skynet convention center. All rights reserved</small>
+                    </div>
+                    <div class="d-flex flex-column">
+                        <p>Get the App</p>
+                        <a href="https://www.apple.com/" target="_blank">
+                            <img src="images/app-store.png" alt="Apple Store" class="img-fluid mb-3">
+                        </a>
+                        <a href="https://play.google.com/" target="_blank">
+                            <img src="images/google-play.png" alt="Apple Store" class="img-fluid">
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
     <!-- Bootstrap Js -->
     <script src="js/bootstrap.bundle.min.js"></script>
 </body>
