Some text added

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 </head>
 <body>
     <!-- Navigation bar -->
-    <header class="">
+    <header>
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container">
                 <div class="overflow-hidden">
-                    <a class="navbar-brand fw-bold" href="#" style="width: 250px;">
-                        Skynet Convention Center   
+                    <a class="navbar-brand fw-bold" href="#">
+                        Skynet Convention Center 
                     </a>
                 </div>
                 
@@ -164,21 +164,22 @@
                 </div>
                 <div class="col">
                     <div class="p-2">
-                        <h4 class="fw-bold mb-3">$300</h4>
-                        <h5 class="fw-bold">Business fair</h5>
-                        <p>For most businesses event like book fair, craft fair.</p>
+                        <h4 class="fw-bold mb-3">$500</h4>
+                        <h5 class="fw-bold">Wedding basic</h5>
+                        <p>For weddings with basic plan
+                            and limited item</p>
                         <div class="d-flex flex-column">
                             <span>
                                 <i class="far fa-check-circle"></i>
-                                <small>limited space access</small>
+                                <small>Full space access</small>
                             </span>
                             <span>
                                 <i class="far fa-check-circle"></i>
-                                <small>Secuirty facility</small>
+                                <small>Food arrangement</small>
                             </span>
                             <span>
                                 <i class="far fa-check-circle"></i>
-                                <small>event support</small>
+                                <small>Mangement support</small>
                             </span>
                             <span>
                                 <i class="far fa-check-circle"></i>
@@ -186,7 +187,7 @@
                             </span>
                             <span>
                                 <i class="far fa-check-circle"></i>
-                                <small>Per day bill</small>
+                                <small>Billed as shift</small>
                             </span>
                         </div>
                         <a class="btn rounded-pill mt-3 w-100 text-primary fw-bold plan-btn">Choose plan</a>
@@ -199,29 +200,29 @@
                         </span>
                     </div>
                     <div>
-                        <h4 class="fw-bold mb-3">$300</h4>
-                        <h5 class="fw-bold">Business fair</h5>
-                        <p>For most businesses event like book fair, craft fair.</p>
+                        <h4 class="fw-bold mb-3">$800</h4>
+                        <h5 class="fw-bold">Wedding plus</h5>
+                        <p>For most weddings with premium plans</p>
                         <div class="d-flex flex-column">
                             <span>
                                 <i class="far fa-check-circle"></i>
-                                <small>limited space access</small>
+                                <small>Full space access</small>
                             </span>
                             <span>
                                 <i class="far fa-check-circle"></i>
-                                <small>Secuirty facility</small>
+                                <small>Dedicated team</small>
                             </span>
                             <span>
                                 <i class="far fa-check-circle"></i>
-                                <small>event support</small>
+                                <small>Buffet food</small>
                             </span>
                             <span>
                                 <i class="far fa-check-circle"></i>
-                                <small>Decoration design</small>
+                                <small>premium Decoration</small>
                             </span>
                             <span>
                                 <i class="far fa-check-circle"></i>
-                                <small>Per day bill</small>
+                                <small>pay as plan</small>
                             </span>
                         </div>
                         <a class="btn rounded-pill mt-3 w-100 text-white bg-dark fw-bold">Choose plan</a>
@@ -229,29 +230,30 @@
                 </div>
                 <div class="col">
                     <div class="p-2">
-                        <h4 class="fw-bold mb-3">$300</h4>
-                        <h5 class="fw-bold">Business fair</h5>
-                        <p>For most businesses event like book fair, craft fair.</p>
+                        <h4 class="fw-bold mb-3">$1200</h4>
+                        <h5 class="fw-bold">Corporate event</h5>
+                        <p>For most corporate business 
+                            events</p>
                         <div class="d-flex flex-column">
                             <span>
                                 <i class="far fa-check-circle"></i>
-                                <small>limited space access</small>
+                                <small>Full space access</small>
                             </span>
                             <span>
                                 <i class="far fa-check-circle"></i>
-                                <small>Secuirty facility</small>
+                                <small>Dedicated team</small>
                             </span>
                             <span>
                                 <i class="far fa-check-circle"></i>
-                                <small>event support</small>
+                                <small>Buffet food</small>
                             </span>
                             <span>
                                 <i class="far fa-check-circle"></i>
-                                <small>Decoration design</small>
+                                <small>premium Decoration</small>
                             </span>
                             <span>
                                 <i class="far fa-check-circle"></i>
-                                <small>Per day bill</small>
+                                <small>pay as plan</small>
                             </span>
                         </div>
                         <a class="btn rounded-pill mt-3 w-100 text-primary fw-bold plan-btn">Choose plan</a>
@@ -342,7 +344,7 @@
                                 </h2>
                                 <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
                                   <div class="accordion-body py-2 ">
-                                    <p>Event design and event planning work hand in hand to deliver a successful event.Events by Knight offer tailor made events. This means we incorporate both event design and event planning to create that perfect event.</p>
+                                    <p>Planning an event should be an enjoyable experience. With more time you will have more options you can explore, make better decisions, and be better prepared for the event. Time is of the essence! </p>
                                   </div>
                                 </div>
                             </div>
@@ -355,7 +357,7 @@
                                 </h2>
                                 <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
                                     <div class="accordion-body py-2 ">
-                                        <p>Event design and event planning work hand in hand to deliver a successful event.Events by Knight offer tailor made events. This means we incorporate both event design and event planning to create that perfect event.</p>
+                                        <p>An 85% refund will be granted when the cancellation request is received 10 business days prior to the scheduled event. A 50% refund will be granted if the request is received between 9 and 5 business days prior to the scheduled event. No refunds will be granted if the request is received with fewer than 5 days prior to the scheduled event.</p>
                                     </div>
                                 </div>  
                             </div>     
@@ -368,7 +370,7 @@
                                 </h2>
                                 <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
                                     <div class="accordion-body py-2 ">
-                                        <p>Event design and event planning work hand in hand to deliver a successful event.Events by Knight offer tailor made events. This means we incorporate both event design and event planning to create that perfect event.</p>
+                                        <p>Using an Excel spreadsheet or Google Sheets that is shareable, changeable, and easy to keep up to date is crucial for budget management. Make sure to use headings and a format that is clear and easy to understand, giving access for editing only to those who need it. There are also some great event budgeting tools you can find on-line, but make sure they can be manipulated to meet your needs.</p>
                                     </div>
                                 </div>  
                             </div>      
