--- a/index.html
+++ b/index.html
@@ -49,44 +49,52 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active mw-100">
-                    <img src="images/banner-1.png" class="d-block img-fluid w-100" alt="...">
+                    <img src="images/banner-1.png" class="d-block img-fluid w-100" alt="banner-1">
                     <div class="carousel-caption d-flex flex-column align-items-lg-center align-items-start">
                         <h5 class="display-3">The perfect venue  for your
                             next event</h5>
                         <p>Wedding Functions to Birthday Parties and Corporate Events to Musical Functions, We offer full Services! </p>
                         <div class="w-100 d-flex justify-content-center">
-                            <button class="btn btn-primary mb-3 px-5 py-3">Book Now</button>
+                            <a href="https://book.events/" target="_blank" class="btn btn-primary mb-3 px-5 py-3">
+                                Book Now
+                             </a> 
                         </div>                   
                   </div>
               </div>
               <div class="carousel-item w-100">
-                <img src="images/banner-2.png" class="d-block img-fluid w-100" alt="...">
+                <img src="images/banner-2.png" class="d-block img-fluid w-100" alt="banner-2">
                 <div class="carousel-caption d-flex flex-column align-items-lg-center align-items-start">
                     <h5 class="display-3">Make your events smart & impactful <br>
                         </h5>
                     <p>Making your events smarter & impactful by personalised event management. </p>
                     <div class="w-100 d-flex justify-content-center">
-                        <button class="btn btn-primary mb-3 px-5 py-3">Book Now</button>
+                        <a href="https://book.events/" target="_blank" class="btn btn-primary mb-3 px-5 py-3">
+                            Book Now
+                         </a> 
                     </div>                   
                   </div>
               </div>
               <div class="carousel-item w-100">
-                <img src="images/banner-3.png" class="d-block img-fluid w-100" alt="...">
+                <img src="images/banner-3.png" class="d-block img-fluid w-100" alt="banner-3">
                 <div class="carousel-caption d-flex flex-column align-items-lg-center align-items-start">
                     <h5 class="display-3">CELEBRATE YOUR EVENTS THAT LASTS LONGER</h5>
                     <p>You should choose Dvents Services because we bring your guests closer to you & helps you to create a relationship that lasts long!</p>
                     <div class="w-100 d-flex justify-content-center">
-                        <button class="btn btn-primary mb-3 px-5 py-3">Book Now</button>
+                        <a href="https://book.events/" target="_blank" class="btn btn-primary mb-3 px-5 py-3">
+                            Book Now
+                         </a> 
                     </div>                   
                   </div>
               </div>
               <div class="carousel-item w-100">
-                <img src="images/banner-4.png" class="d-block img-fluid w-100" alt="...">
+                <img src="images/banner-4.png" class="d-block img-fluid w-100" alt="banner-4">
                 <div class="carousel-caption d-flex flex-column align-items-lg-center align-items-start">
                     <h5 class="display-3">WE PERSONALIZE YOUR WEDDING EVENTS</h5>
                     <p>With a full range of Event Planning Services, our Clients have Successful & Prosperous Events!</p>
                     <div class="w-100 d-flex justify-content-center">
-                        <button class="btn btn-primary mb-3 px-5 py-3">Book Now</button>
+                        <a href="https://book.events/" target="_blank" class="btn btn-primary mb-3 px-5 py-3">
+                           Book Now
+                        </a>                   
                     </div>                   
                   </div>
               </div>              
@@ -146,7 +154,7 @@
                 <div class="col">
                     <div class="p-2">
                         <h4 class="fw-bold mb-3">$300</h4>
-                        <h5 class="fw-bold">Business fair</h5>
+                        <h4 class="fw-bold mb-3">Business fair</h4>
                         <p>For most businesses event like book fair, craft fair.</p>
                         <div class="d-flex flex-column">
                             <span>
@@ -176,7 +184,7 @@
                 <div class="col">
                     <div class="p-2">
                         <h4 class="fw-bold mb-3">$500</h4>
-                        <h5 class="fw-bold">Wedding basic</h5>
+                        <h4 class="fw-bold mb-3">Wedding basic</h4>
                         <p>For weddings with basic plan
                             and limited item</p>
                         <div class="d-flex flex-column">
@@ -204,15 +212,15 @@
                         <a class="btn rounded-pill mt-3 w-100 text-primary fw-bold plan-btn">Choose plan</a>
                     </div>
                 </div>
-                <div class="col shadow-lg highlight p-5 bg-info text-white position-relative">
+                <div class="col shadow-lg highlight p-5 text-white position-relative">
                     <div>
-                        <span class="badge rounded-pill bg-danger hot border position-absolute top-0 translate-middle">
+                        <span class="badge rounded-pill bg-danger px-2 hot border position-absolute top-0 translate-middle">
                             Hot
                         </span>
                     </div>
                     <div>
                         <h4 class="fw-bold mb-3">$800</h4>
-                        <h5 class="fw-bold">Wedding plus</h5>
+                        <h4 class="fw-bold mb-3">Wedding plus</h4>
                         <p>For most weddings with premium plans</p>
                         <div class="d-flex flex-column">
                             <span>
@@ -236,13 +244,13 @@
                                 <small>pay as plan</small>
                             </span>
                         </div>
-                        <a class="btn rounded-pill mt-3 w-100 text-white bg-dark fw-bold">Choose plan</a>
+                        <a class="btn rounded-pill mt-3 w-100 text-white fw-bold highlight-btn">Choose plan</a>
                     </div>
                 </div>
                 <div class="col">
                     <div class="p-2">
                         <h4 class="fw-bold mb-3">$1200</h4>
-                        <h5 class="fw-bold">Corporate event</h5>
+                        <h4 class="fw-bold mb-3">Corporate event</h4>
                         <p>For most corporate business 
                             events</p>
                         <div class="d-flex flex-column">
@@ -278,41 +286,54 @@
     <section class="my-5">
         <div class="container">
             <h2 class="text-center mb-5 py-5 fw-bold">Happy Clients says</h2>
-            <div class="row gy-3">
-                <div class="col-lg-4 col-md-6 col-12">
-                    <div class="d-flex flex-column align-items-center text-center shadow-lg py-4 px-5 rounded-3">
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4 d-flex justify-content-center">
+                <div class="col">
+                  <div class="card h-100 py-4 px-5">                   
+                    <div class="card-body  text-center py-3">
                         <p>
-                            Slate helps you see how many more days you need to work to reach your financial goal for the month and year.
+                            We used Skynet and her team to coordinate the venue set up and our reception. Everything went off without a hitch and they were great help to keep us on schedule for dinner, dances and cake cutting.They made sure we had a drink/food when we arrived; I definitely felt like I didn't need to worry about anything other than having a great night! 
                         </p>
+                    </div>
+                    <div class="d-flex flex-column align-items-center text-center">
                         <img src="images/person 1.png" alt="person" class="img-fluid mb-3" width="100px">
                         <h6 class="fw-bold">Regina Miles</h6>
                         <span>Banker</span>
                     </div>
+                  </div>
                 </div>
-                <div class="col-lg-4 col-md-6 col-12">
-                    <div class="d-flex flex-column align-items-center text-center shadow-lg py-4 px-5 rounded-3">
+                <div class="col">
+                  <div class="card h-100 py-4 px-5">                   
+                    <div class=" card-body text-center py-3">
                         <p>
-                            Slate helps you see how many more days you need to work to reach your financial goal for the month and year.
+                            I met Skynet while I was searching for my venue. On our wedding day Skynet didn't skip a beat. She help calm me before my ceremony, directed the guests, worked with my caterer, and stayed with us all night. I would highly recommend Skynet team.
                         </p>
+                    </div>
+                    <div class="d-flex flex-column align-items-center text-center">
                         <img src="images/person 2.png" alt="person" class="img-fluid mb-3" width="100px">
                         <h6 class="fw-bold">Jone Drake</h6>
                         <span>Banker</span>
                     </div>
+                  </div>
                 </div>
-                <div class="col-lg-4 col-md-6 col-12">
-                    <div class="d-flex flex-column align-items-center text-center shadow-lg py-4 px-5 rounded-3">
+                <div class="col">
+                  <div class="card h-100 py-4 px-5">                   
+                    <div class="card-body  text-center py-3">
                         <p>
-                            Slate helps you see how many more days you need to work to reach your financial goal for the month and year.
+                            It was very refreshing having the Skynet team take care of the details leading up to and the day of the wedding. We were able to really enjoy our wedding day knowing that Brittney and Amber were there for any questions or chaos that popped up. If it did we'll never know. Our day was perfect!
                         </p>
+                    </div>
+                    <div class="d-flex flex-column align-items-center text-center">
                         <img src="images/person 3.png" alt="person" class="img-fluid mb-3" width="100px">
                         <h6 class="fw-bold">Cret Yater</h6>
                         <span>Banker</span>
                     </div>
-                </div>
-                
+                  </div>
+                </div>               
             </div>
         </div>
     </section>
+
+
     <!-- Celebrate with us -->
     <section id="celebrate" class="mt-5">
         <div class="container h-100">
